--- a/OpenEdXMobile/default_config/config.yaml
+++ b/OpenEdXMobile/default_config/config.yaml
@@ -1,5 +1,5 @@
-API_HOST_URL: 'http://10.0.2.2:8000' # localhost is 10.0.2.2 in Android
-ENVIRONMENT_DISPLAY_NAME: 'Localhost'
-PLATFORM_NAME: 'Your platform name here'
-PLATFORM_DESTINATION_NAME: 'example.com'
+API_HOST_URL: 'https://lmsopented.telefonicaed.com/ ' # localhost is 10.0.2.2 in Android
+ENVIRONMENT_DISPLAY_NAME: 'lmsopented'
+PLATFORM_NAME: 'telefonicaed'
+PLATFORM_DESTINATION_NAME: 'telefonicaed.com'
 FEEDBACK_EMAIL_ADDRESS: 'support@example.com'
