Import go libraries

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -17,7 +17,7 @@ buildscript {
         classpath 'com.facebook.testing.screenshot:plugin:0.11.0'
         classpath 'com.google.gms:google-services:4.2.0'
         // Jacoco-android Wrapper : https://github.com/arturdm/jacoco-android-gradle-plugin
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
+        //classpath 'com.dicedmelon.gradle:jacoco-android:0.1.4'
     }
 }
 
@@ -25,7 +25,8 @@ apply plugin: 'edxapp'
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'jacoco-android'
+apply plugin: 'kotlin-kapt'
+//apply plugin: 'jacoco-android'
 edx {
     platform = ANDROID
 }
@@ -34,9 +35,9 @@ apply plugin: 'newrelic'
 apply plugin: 'com.facebook.testing.screenshot'
 apply from: file('gradle_scripts/AndroidHelper.gradle')
 
-jacoco {
+/*jacoco {
     toolVersion = "0.8.4"
-}
+}*/
 /**
  * Computes a semantic version string, e.g. "1.0" or "2.5.7" by parsing git branches or tags.
  * Branch name takes priority, otherwise the last annotated tag name will be used.
@@ -265,6 +266,14 @@ dependencies {
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 
+
+    implementation("com.google.guava:guava:29.0-android")
+
+    implementation "live.govideo:auth:0.4.8"
+    implementation "live.govideo:onboarding:0.4.8"
+    implementation "live.govideo:permissions:0.4.8"
+    implementation "live.govideo:videos:0.4.8"
+    implementation "live.govideo:tracking:0.4.8"
 }
 
 configurations {
